# CrispSynth

./: CMakeLists.txt  README.md  Scene.h
include/crispsynth/: Game.h  Locator.h  OpenGL.h
include/crispsynth/buttons/: Button.h
include/crispsynth/game-objects/: BoxCollection.h  GameObject.h  HitboxObject.h  HurtboxObject.h  InputTextObject.h  RectangleObject.h  ShapeObject.h  SpriteObject.h  StoryObject.h  TextObject.h
include/crispsynth/game-objects/components/: Component.h  DrawableComponent.h  HitboxComponent.h  HurtboxComponent.h  RectangleComponent.h  RenderComponent.h  ShapeComponent.h  SpriteComponent.h  TextComponent.h
include/crispsynth/mesh/: BonedMesh.h  IMesh.h  MeshContainer.h  MeshShaders.h  StaticMesh.h  Texture.h
include/crispsynth/resources/: DefaultTextures.h  IResources.h  LocalResources.h  NullResources.h
include/crispsynth/scenes/: Scene.h
src/: Game.cpp  Locator.cpp  glad.c
src/buttons/: Button.cpp
src/game-objects/: BoxCollection.cpp  HitboxObject.cpp  HurtboxObject.cpp  InputTextObject.cpp  RectangleObject.cpp  ShapeObject.cpp  SpriteObject.cpp  StoryObject.cpp  TextObject.cpp
src/game-objects/components/: Component.cpp  HitboxComponent.cpp  HurtboxComponent.cpp  RectangleComponent.cpp  RenderComponent.cpp  ShapeComponent.cpp  SpriteComponent.cpp  TextComponent.cpp
src/mesh/: BonedMesh.cpp  MeshContainer.cpp  MeshShaders.cpp  StaticMesh.cpp  Texture.cpp
src/resources/: DefaultTextures.cpp  LocalResources.cpp  MainMenuTextures.cpp  NullResources.cpp  TextureLoader.cpp
src/scenes/: Scene.cpp
